Made some changes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
     <body>
-        <h1>Im gonna cry</h1>
+        <h1>Alin Olson</h1>
+        <h3>she/they</h3>
+        <h5>The Dreamer</h5>
     </body>    
 </html>
