--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+        <title>Alin's Portfolio</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+    </head>
     <body>
         <h1>Alin Olson</h1>
         <h3>she/they</h3>
         <h5>The Dreamer</h5>
+
+        <hr>
+        <p>I am a musician, game developer, digital artist, and Treasurer of the Boise State Game Development Club. 
+        I am also a student in the <a href="https://www.boisestate.edu/gimm/">Gimm Program</a> </p>
+        <hr>
+        <img src="DSC_9502b.jpeg" alt="Alin on the railing">
+        <p>Let's connect <a href="g.rantolson02@gmail.com">g.rantolson02@gmail.com</a></p>
     </body>    
 </html>
