hopefully fixed email link
yayaya

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         I am also a student in the <a href="https://www.boisestate.edu/gimm/">Gimm Program</a> </p>
         <hr>
         <img src="DSC_9502b.jpeg" alt="Alin on the railing">
-        <p>Let's connect <a href="g.rantolson02@gmail.com">g.rantolson02@gmail.com</a></p>
+        <p>Let's connect <a href="mailto:g.rantolson02@gmail.com">g.rantolson02@gmail.com</a></p>
     </body>    
 </html>
