--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1>Alin Olson</h1>
-        <h3>she/they</h3>
+        <h3>they/them</h3>
         <h5>The Dreamer</h5>
 
         <hr>
