starting some improvements
experimenting with grid

--- a/index.html
+++ b/index.html
@@ -11,15 +11,24 @@
             crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>Alin Olson</h1>
-        <h3>they/them</h3>
-        <h5>The Dreamer</h5>
-
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Alin Olson</h1>
+                    <h3>they/them</h3>
+                    <h5>The Dreamer</h5>
+                    <hr>
+                    <p>I am a musician, game developer, digital artist, and Treasurer of the Boise State Game Development Club. 
+                        I am also a student in the <a href="https://www.boisestate.edu/gimm/">Gimm Program</a> </p>
+                </div>
+                <div class="col-md-6">
+                    <img src="DSC_9502b.jpeg" alt="Alin on the railing">
+                </div>
+            </div>
+        </div>
+    
         <hr>
-        <p>I am a musician, game developer, digital artist, and Treasurer of the Boise State Game Development Club. 
-        I am also a student in the <a href="https://www.boisestate.edu/gimm/">Gimm Program</a> </p>
-        <hr>
-        <img src="DSC_9502b.jpeg" alt="Alin on the railing">
+        
         <p>Let's connect <a href="mailto:g.rantolson02@gmail.com">g.rantolson02@gmail.com</a></p>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
