--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+        <meta charset="utf-8">
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no'>
         <title>Alin's Portfolio</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
+        <link href="css/stylesheet.css" rel="stylesheet">
     </head>
     <body>
         <h1>UNDER CONSTRUCTION</h1>
         <hr>
-        <h1>Alin Olson</h1>
-        <h3>they/them</h3>
-        <h5>The Dreamer</h5>
+        
+        <div class="container-fluid" id="titles">
+            <div class="row">
+                <div class="col-6">
+                    <h1>Alin Olson</h1>
+                </div>
+                <div class="col-6">
+                    <h3>(they/them)</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h5>The Dreamer</h5>
+                </div>
+            </div>
+        </div>
 
         <hr>
-        <div class="container-fluid">
+        <div class="container-fluid" id="intro">
             <div class="row">
                 <div class="col-md-6">
-                    <p>Whatever Alin (they/them) does, they do it with an unwavering conviction. 
-                        Ever since 2018, they have been making music, graphic designs, digital art, 
-                        polishing coding skills, and putting out unique and interesting art into the world.</p>
+                    <h3>Whatever Alin does, they do it with an unwavering conviction. 
+                        Ever since 2018, they have been making music, graphic design, digital art, 
+                        building applications, and putting out unique and interesting art into the world.</h3>
                 </div>
                 <div class="col-md-6">
-                    <img src="DSC_9502b.jpeg" alt="Alin on the railing">
+                    <img src="cover_photo.png" alt="Alin on the railing">
                 </div>
             </div>
         </div>
