Renamed Animations so that they will load
W

--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
         <div class="row">
             <!-- gifs -->
             <div class="col-3">
-                <img src="Assets\Pics\TheCave\_Idle.gif" alt="Cosmo's Idle Animation">
+                <img src="Assets\Pics\TheCave\Cosmo_Idle.gif" alt="Cosmo's Idle Animation">
             </div>
             <div class="col-3">
                 <img src="Assets\Pics\TheCave\Shadow_Idle.gif" alt="Shadow Walking Animation">
             </div>
             <div class="col-3">
-                <img src="Assets\Pics\TheCave\_Walk.gif" alt="Cosmo's Walking Animation">
+                <img src="Assets\Pics\TheCave\Cosmo_Walk.gif" alt="Cosmo's Walking Animation">
             </div>
             <div class="col-3">
                 <img src="Assets\Pics\TheCave\Shadow_Walk.gif" alt="Shadow Walking Animation">
