made the text collapse with a button and added comments to make my life easier
refer to title

--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
     <hr>
 
     <div class="container-fluid" id="Tx2Day">
+        <!-- intro -->
         <div class="row">
             <div class="col-12">
                 <h2><a href="Tx2Day.com" target="_blank"></a>Tx2Day.com</h2>
                 <h3>Design Mockups</h3>
             </div>
         </div>
+        <!-- first row of pictures -->
         <div class="row">
             <div class="col-md-6">
                 <img class="curvedImg" src="Assets\Pics\Tx2Day\Tx2Day_Welcome.png" alt="The Tx2Day Welcome Page">
@@ -81,6 +83,7 @@
                 <h5>Sign In</h5>
             </div>
         </div>
+        <!-- second row of pictures -->
         <div class="row">
             <div class="col-md-3">
                 <img class="curvedImg" src="Assets\Pics\Tx2Day\Tx2Day_Client_Select.png"
@@ -102,9 +105,21 @@
                 <h5>Daily Report</h5>
             </div>
         </div>
+        <!-- text -->
         <div class="row">
-            <div class="col-12" id="artifactText">
-                <h3>The artifact is about my work on the
+            <div class="col-12">
+                <p>
+                    <button class="btn btn-primary" type="button" 
+                    data-bs-toggle="collapse" data-bs-target="#collapseExample" 
+                    aria-expanded="false" aria-controls="collapseExample"
+                    id="myCollapseButton">
+                      A small excerpt about the project
+                    </button>
+                </p>
+            </div>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body" id="collapseText">
+                    <h3>The artifact is about my work on the
                     website / webapp Tx2Day, which is a new
                     way to approach therapy documentation.
                     The webapp is focused on simplifying the
@@ -122,19 +137,22 @@
                     was able to incorporate what they wanted
                     into the design while staying away from
                     bland theming.</h3>
+                </div>
             </div>
-        </div>
+        </div>  
     </div>
 
     <hr>
 
     <div class="container-fluid" id="caveGame">
+        <!-- intro -->
         <div class="row">
             <div class="col-12">
                 <h2>The Cave</h2>
                 <h3>(2D Platformer)</h3>
             </div>
         </div>
+        <!-- trailer video -->
         <div class="row">
             <div class="col-12" id="caveGameTrailer">
                 <!-- Trailer Video -->
@@ -143,9 +161,21 @@
                 </video>
             </div>
         </div>
+        <!-- Text -->
         <div class="row">
-            <div class="col-12" id="artifactText">
-                <h3>The artifact is about showcasing my first
+            <div class="col-12">
+                <p>
+                    <button class="btn btn-primary" type="button" 
+                    data-bs-toggle="collapse" data-bs-target="#caveText" 
+                    aria-expanded="false" aria-controls="caveText"
+                    id="myCollapseButton">
+                      A small excerpt about the project
+                    </button>
+                </p>
+            </div>
+            <div class="collapse" id="caveText">
+                <div class="card card-body" id="collapseText">
+                    <h3>The artifact is about showcasing my first
                     experience delving into game design and
                     showcasing my art and storytelling style.
                     The game is a spin off of the first half of
@@ -164,9 +194,11 @@
                     game could go was a great exercise in
                     having a good idea and seeing how far it can
                     take you.
-                </h3>
+                    </h3>
+                </div>
             </div>
         </div>
+        <!-- devlog -->
         <div class="row">
             <div class="col-12" id="caveGameDevLog video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/oY0PAvClYtw?si=X8Aw2GpomB_LqTKD"
@@ -175,6 +207,7 @@
                     allowfullscreen></iframe>
             </div>
         </div>
+        <!-- cosmo gifs -->
         <div class="row">
             <!-- gifs -->
             <div class="col-3">
@@ -190,6 +223,7 @@
                 <img src="Assets\Pics\TheCave\Shadow_Walk.gif" alt="Shadow Walking Animation">
             </div>
         </div>
+        <!-- carousel -->
         <div class="row">
             <div class="col-12">
                 <!-- autoscrolling image gallery of screenshots from Bootstrap-->
@@ -230,6 +264,7 @@
                 </div>
             </div>
         </div>
+        <!-- diamond gifs -->
         <div class="row">
             <!-- more gifs -->
             <div class="col-4">
@@ -242,6 +277,7 @@
                 <img src="Assets\Pics\TheCave\DiamondSprite.gif" alt="Diamond Animation">
             </div>
         </div>
+        <!-- download link -->
         <div class="row">
             <!-- download link -->
         </div>
@@ -250,11 +286,13 @@
     <hr>
 
     <div class="container-fluid" id="wizardAR">
+        <!-- intro -->
         <div class="row">
             <div class="col-12">
                 <h2>AR Top Down Shooter</h2>
             </div>
         </div>
+        <!-- carousel -->
         <div class="row">
             <div class="col-12">
                 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -290,29 +328,43 @@
                 </div>
             </div>
         </div>
+        <!-- text -->
         <div class="row">
-            <div class="col-12" id="artifactText">
-                <h3>In this project, my team and I were
-                    challenged to create an experience
-                    involving AR. We decided to create a Top
-                    Down Shooter game with one player
-                    controlling the character through the
-                    computer’s Keyboard and mouse, and
-                    another player controlling the enemies
-                    and boss using Cards that we created.
-                    I learned a lot about the workflow of
-                    building a larger scale project on a team
-                    in a short amount of time during this
-                    project.
-                    The project was fun to build because I
-                    had the opportunity to create some cool
-                    sounds, sprites, and an Audio
-                    Statemachine that could be used to play
-                    sound effects when bullets were fired or
-                    the dash button was pressed.
-                </h3>
+            <div class="col-12">
+                <p>
+                    <button class="btn btn-primary" type="button" 
+                    data-bs-toggle="collapse" data-bs-target="#arText" 
+                    aria-expanded="false" aria-controls="arText"
+                    id="myCollapseButton">
+                      A small excerpt about the project
+                    </button>
+                </p>
+            </div>
+            <div class="collapse" id="arText">
+                <div class="card card-body" id="collapseText">
+                    <h3>In this project, my team and I were
+                        challenged to create an experience
+                        involving AR. We decided to create a Top
+                        Down Shooter game with one player
+                        controlling the character through the
+                        computer’s Keyboard and mouse, and
+                        another player controlling the enemies
+                        and boss using Cards that we created.
+                        I learned a lot about the workflow of
+                        building a larger scale project on a team
+                        in a short amount of time during this
+                        project.
+                        The project was fun to build because I
+                        had the opportunity to create some cool
+                        sounds, sprites, and an Audio
+                        Statemachine that could be used to play
+                        sound effects when bullets were fired or
+                        the dash button was pressed.
+                    </h3>
+                </div>
             </div>
         </div>
+        <!-- boss gif -->
         <div class="row">
             <div class="col-md-4">
             </div>
@@ -322,6 +374,7 @@
             <div class="col-md-4">
             </div>
         </div>
+        <!-- sfx -->
         <div class="row">
             <div class="col-md-3">
                 <audio controls>
@@ -352,6 +405,7 @@
                 <h5>Player Hurt Sound</h5>
             </div>
         </div>
+        <!-- songs -->
         <div class="row">
             <div class="col-md-6">
                 <audio controls>
@@ -375,6 +429,8 @@
     <div class="container-fluid" id="Entangled">
         
     </div>
+    
+
 </body>
 
 </html>
