Added Entangled Assets
refer to title

--- a/index.html
+++ b/index.html
@@ -442,7 +442,76 @@
         <hr>
 
         <div class="container-fluid" id="Entangled">
-            
+            <!-- intro -->
+            <div class="row">
+                <div class="col-12">
+                    <h2>ENTANGLED</h2>
+                </div>
+            </div>
+            <!-- carousel -->
+            <div clas="row">
+                <div class="col-12">
+                    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="5000">
+                                <img src="Assets\Pics\AR\AR_Lvl1.png" class="d-block w-100" alt="A screenshot of level 1">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\AR\AR_GameManager.png" class="d-block w-100"
+                                    alt="Game management code">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\AR\AR_SoundManager.png" class="d-block w-100"
+                                    alt="Sound management code">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\AR\AR_Code.png" class="d-block w-100" alt="Circling target code">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\AR\AR_Lvl2.png" class="d-block w-100" alt="A screenshot of level 2">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+            <!-- text -->
+            <div class="row">
+                <div class="col-12">
+                    <p>
+                        <button class="btn btn-primary" type="button" 
+                        data-bs-toggle="collapse" data-bs-target="#arText" 
+                        aria-expanded="false" aria-controls="arText"
+                        id="myCollapseButton">
+                        A small excerpt about the project
+                        </button>
+                    </p>
+                </div>
+                <div class="collapse" id="arText">
+                    <div class="card card-body" id="collapseText">
+                        <h3>This is a Web comic / app that I worked on with other developers 
+                            that aims to explain how quantum entanglement works.
+                            I learned a lot about how to condense big and convoluted ideas into easily 
+                            understood allegories in this project. I wrote the script for the comic, 
+                            and we as a team brainstormed ways to further visualize entanglement. 
+                            My biggest contribution to this visualization was to create a matching game 
+                            that populates a grid of prefabs randomly every time it is loaded.
+                            The project was fun to build because I really liked the team I was working with 
+                            and the ideas we had to showcase this thing.
+                        </h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
