--- a/index.html
+++ b/index.html
@@ -445,30 +445,91 @@
             <!-- intro -->
             <div class="row">
                 <div class="col-12">
-                    <h2>ENTANGLED</h2>
+                    <h2>Entangled</h2>
+                    <h3>(Interactive Comic)</h3>
                 </div>
             </div>
-            <!-- carousel -->
+            <!-- logo -->
+            <div class="row">
+                <div class="col-12">
+                    <img src="Assets\Pics\Entangled\Logo.png" class="curvedImg" alt="Entangled Logo">
+                </div>
+            </div>
+            <!-- section title IMAGES -->
+            <div class="row">
+                <h3>IDK WHAT TO CALL THIS SECTION RN</h3>
+            </div>
+            <!-- carousel IMAGES -->
             <div clas="row">
                 <div class="col-12">
                     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-bs-interval="5000">
-                                <img src="Assets\Pics\AR\AR_Lvl1.png" class="d-block w-100" alt="A screenshot of level 1">
+                                <img src="Assets\Pics\Entangled\matchingGame.png" class="d-block w-100" 
+                                    alt="the Entangled matching game">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
-                                <img src="Assets\Pics\AR\AR_GameManager.png" class="d-block w-100"
-                                    alt="Game management code">
+                                <img src="Assets\Pics\Entangled\Page_1.png" class="d-block w-100"
+                                    alt="page one of the comic">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
-                                <img src="Assets\Pics\AR\AR_SoundManager.png" class="d-block w-100"
-                                    alt="Sound management code">
+                                <img src="Assets\Pics\Entangled\Page_2.png" class="d-block w-100"
+                                    alt="page two of the comic">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
-                                <img src="Assets\Pics\AR\AR_Code.png" class="d-block w-100" alt="Circling target code">
+                                <img src="Assets\Pics\Entangled\Page_3.png" class="d-block w-100" 
+                                    alt="page three of the comic">
                             </div>
                             <div class="carousel-item" data-bs-interval="5000">
-                                <img src="Assets\Pics\AR\AR_Lvl2.png" class="d-block w-100" alt="A screenshot of level 2">
+                                <img src="Assets\Pics\Entangled\UIandWakeUp.png" class="d-block w-100" 
+                                    alt="a closer look at one of the panels">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Entangled\VideoSnippet.png" class="d-block w-100" 
+                                    alt="a screengrab from the rotoscope video we made">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Entangled\CoolGlitch.png" class="d-block w-100" 
+                                    alt="a cool glitch that we encountered while working on the credit scene">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+
+            </div>           
+            <!-- section title NAPKIN -->
+            <div class="row">
+                <h3>"Napkin Sketches"</h3>
+            </div>
+            <!-- carousel NAPKIN -->
+            <div clas="row">
+                <div class="col-12">
+                    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="5000">
+                                <img src="Assets\Pics\Entangled\Notebook_scan_1.png" class="d-block w-100" 
+                                    alt="napkin sketch #1">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Entangled\Notebook_scan_2.png" class="d-block w-100"
+                                    alt="napkin sketch #2">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Entangled\Notebook_scan_3.png" class="d-block w-100"
+                                    alt="napkin sketch #3">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Entangled\Notebook_scan_4.png" class="d-block w-100" alt="napkin sketch #4">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -485,6 +546,42 @@
                 </div>
 
             </div>
+            <!-- section title CODE -->
+            <div class="row">
+                <h3>Code</h3>
+            </div>
+            <!-- carousel CODE -->
+            <div clas="row">
+                <div class="col-12">
+                    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="5000">
+                                <img src="Assets\Pics\Entangled\badCode.png" class="d-block w-100" 
+                                    alt="an early iteration of the matching game code">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Entangled\CodeScreenshot1.png" class="d-block w-100"
+                                    alt="final iteration of the matching game code">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Entangled\CodeScreenshot2.png" class="d-block w-100"
+                                    alt="modular code for comic interactions">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+
+            </div> 
             <!-- text -->
             <div class="row">
                 <div class="col-12">
