--- a/entangledProject.html
+++ b/entangledProject.html
@@ -24,7 +24,7 @@
     
     <div>
         <nav class="nav nav-pills nav-fill">
-            <a class="nav-item nav-link active" href="index.html">Home</a>
+            <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="caveProject.html">The Cave</a>
             <a class="nav-item nav-link" href="tx2dayProject.html">Tx2Day</a>
             <a class="nav-item nav-link" href="arProject.html">Wizard AR</a>
